[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/chat/chat_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/chat/grayscale.shader" type="Shader" id=2]
[ext_resource path="res://ui/chat/emojibutton.gd" type="Script" id=3]
[ext_resource path="res://ui/chat/texteditor.gd" type="Script" id=4]
[ext_resource path="res://ui/chat/TextInput.gd" type="Script" id=5]
[ext_resource path="res://assets/emojis/happy.png" type="Texture" id=6]
[ext_resource path="res://ui/gridmenu/GridMenu.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.25098, 0.266667, 0.294118, 1 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/saturation = 0.0
shader_param/scale = 1.0

[sub_resource type="StyleBoxEmpty" id=3]

[node name="TextInput" type="PanelContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -50.0
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="h" type="HBoxContainer" parent="."]
margin_right = 1422.0
margin_bottom = 50.0
custom_constants/separation = 0

[node name="MC" type="MarginContainer" parent="h"]
margin_right = 1372.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="placeholder" type="Label" parent="h/MC"]
margin_left = 5.0
margin_top = 15.0
margin_right = 131.0
margin_bottom = 35.0
size_flags_horizontal = 0
custom_colors/font_color = Color( 1, 1, 1, 0.509804 )
text = "write text here"
valign = 2

[node name="text" type="TextEdit" parent="h/MC"]
margin_left = 5.0
margin_top = 15.0
margin_right = 1367.0
margin_bottom = 35.0
rect_min_size = Vector2( 200, 20 )
size_flags_vertical = 4
context_menu_enabled = false
smooth_scrolling = true
wrap_enabled = true
caret_blink = true
script = ExtResource( 4 )
max_lines = 4

[node name="MC2" type="MarginContainer" parent="h"]
margin_left = 1372.0
margin_right = 1422.0
margin_bottom = 50.0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="EmojiButton" type="TextureButton" parent="h/MC2"]
material = SubResource( 2 )
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
focus_mode = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 1
texture_normal = ExtResource( 6 )
expand = true
script = ExtResource( 3 )
offset = Vector2( -180, -180 )

[node name="Popup" type="PopupPanel" parent="h/MC2/EmojiButton"]
margin_right = 40.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 3 )

[node name="EmojiMenu" type="GridContainer" parent="h/MC2/EmojiButton/Popup"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
script = ExtResource( 7 )

[connection signal="send" from="h/MC/text" to="." method="_on_text_send"]
[connection signal="text_changed" from="h/MC/text" to="." method="_on_text_changed"]
[connection signal="emoji_selected" from="h/MC2/EmojiButton" to="h/MC/text" method="_emoji_selected"]
[connection signal="mouse_entered" from="h/MC2/EmojiButton" to="h/MC2/EmojiButton" method="_focused" binds= [ true ]]
[connection signal="mouse_exited" from="h/MC2/EmojiButton" to="h/MC2/EmojiButton" method="_focused" binds= [ false ]]
[connection signal="pressed" from="h/MC2/EmojiButton/Popup/EmojiMenu" to="h/MC2/EmojiButton" method="_on_EmojiMenu_pressed"]
